--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
-    "d3-shape": "^2.1.0"
+    "d3-shape": "^2.1.0",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.merge": "^4.6.2"
   }
 }
